# jbig2dec-feedstock

./: .recipe_maintainers.json  README.md  conda-forge.yml  pixi.toml
.azure-pipelines/: azure-pipelines-win.yml
.scripts/: run_osx_build.sh
recipe/: CMakeLists.txt  bld.bat  build.bat  build.sh  meta.yaml  recipe.yaml
